cluster/apps/networking-system/external/omada/ingress-traefikCRD.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: &name omada-controller
  labels:
    app.kubernetes.io/name: *name
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`omada.${SECRET_DOMAIN_0}`)
      middlewares:
        - name: omada-controller-headers
        - name: omada-controller-redirect
        - name: local-only
      services:
        - name: omada-controller
          port: 8043
          namespace: default
          scheme: https
          serversTransport: omada-controller
  tls:
    secretName: ${SECRET_DOMAIN_0//./-}-prod-tls
